--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Commit and push if changed   # 更新README.md
         run: |
           git diff
-          git config --global user.email "zhaoolee@gmail.com"
-          git config --global user.name "zhaoolee"
+          git config --global user.email "xudadi811@gmail.com"
+          git config --global user.name "xudadi811"
           git add README.md
           git add docs
           git commit -m "Github Action auto Updated"
